# theteller-rust

./: .gitignore  Cargo.toml  README.md
examples/: bank_transfer.rs  momo_payment.rs  momo_transfer.rs  standard_checkout.rs  verify_transaction.rs
src/: lib.rs  main.rs
src/checkout/initialize/: async.rs
src/client/: async.rs  blocking.rs
src/constants/: account_issuers.rs  bank_codes.rs  endpoints.rs  processing_codes.rs
src/resources/: checkout.rs  payments.rs  transaction.rs  transfer.rs
src/traits/: create_request_payload.rs  custom_client_functions.rs
src/utils/: amount_to_minor_unit.rs  amount_to_string.rs  generate_request_id.rs  generate_transaction_id.rs
